...
    }, [])
  )

  const headerComponent = () => {
    return (
      <Top>
        <Header testID="hosting-header-component">
          <Typography.H color={colors.red}>List your space</Typography.H>
          <View style={{ marginTop: 14, marginBottom: 20 }}>
            <Typography.P colors={colors.gray}>
              From a loft to a soccer field, you can list various types of space for free,
              share it.
            </Typography.P>
...
      </Top>
    )
  }
  return (
    <Container>
      <FlatList
        testID="hosting-flatlist"
        ListHeaderComponent={
          headerComponent
        }
        stickyHeaderIndices={[0]}
        data={userSpaces}
        extraData={userSpaces}
...
